--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,13 @@
     <artifactId>UnderstandingJVM</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/cglib/cglib-nodep -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>3.2.5</version>
+        </dependency>
+    </dependencies>
 </project>
